# timesheet-import

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_baseline.py  0002_create_users.py  0003_create_user_tokens.py  0004_add_needs_reauth_to_user_tokens.py  0005_create_connector_row_mappings.py  0006_add_db_name_to_user_tokens.py  0007_create_imports_and_import_rows.py  0008_timestamps_to_timezone_aware.py
backend/app/: dependencies.py  main.py
backend/app/adapters/: __init__.py  base.py  jira.py  odoo.py  registry.py  stub.py
backend/app/core/: config.py  logging.py  rbac.py  security.py
backend/app/db/: base.py  conventions.py  mixins.py  session.py
backend/app/models/: __init__.py  connector_row_mapping.py  import_log.py  user.py  user_token.py
backend/app/routers/: adapters.py  auth.py  connectors.py  e2e_test_router.py  imports.py  mappings.py  users.py
backend/app/services/: mapping_service.py
backend/e2e_stub/: main.py
backend/tests/: conftest.py
backend/tests/integration/: test_adapter_autocomplete.py  test_auth.py  test_connectors.py  test_health.py  test_imports_persist.py  test_imports_read.py  test_mapping_suggestions.py  test_rbac_integration.py
backend/tests/unit/: test_adapter_registry.py  test_connector_row_mapping_model.py  test_e2e_test_mode_guard.py  test_import_model.py  test_jira_adapter.py  (+6 more)
(+128 files in other folders)
